@@ -148,6 +148,7 @@ remove = Win32API::File
 
 ; optional for testing
 remove = Acme::Alien::DontPanic
+remove = Sub::Identify
 
 ; optional !!
 remove = Alien::FFI
